bugfix#36693 - Forms - Wrapping and alignment of label in Preview form (#598)

--- a/src/alto-ui/Form/Radio/Radio.scss
+++ b/src/alto-ui/Form/Radio/Radio.scss
@@ -80,10 +80,7 @@
 }
 
 .Radio__label-text {
-  @extend %text-ellipsis;
-  line-height: 2em;
-  height: 2em;
-  position: relative;
+  @extend %multiline-label;
 
   &--hidden {
     @extend %visually-hidden;
